@@ -140,6 +140,8 @@ Release 0.3.0 - Unreleased
 
     HIVE-394. Break plans in Cluster Mode. (Namit Jain via zshao)
 
+    HIVE-400. Fix bug in genColList. (Namit Jain via zshao)
+
 Release 0.2.0 - Unreleased
 
   INCOMPATIBLE CHANGES
